--- a/Assets/Runtime/com.yannickscf.ls-tournament.common.asmdef
+++ b/Assets/Runtime/com.yannickscf.ls-tournament.common.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:57aceb93e943b3a48b90c3b7039ece0c"
+        "GUID:57aceb93e943b3a48b90c3b7039ece0c",
+        "GUID:fc31e1cc0928e3041a1fd4a63edd812f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
