--- a/Assets/Runtime/com.yannickscf.ls-tournament.common.asmdef
+++ b/Assets/Runtime/com.yannickscf.ls-tournament.common.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:57aceb93e943b3a48b90c3b7039ece0c",
-        "GUID:fc31e1cc0928e3041a1fd4a63edd812f"
+        "GUID:fc31e1cc0928e3041a1fd4a63edd812f",
+        "GUID:a11ff146d38b27a44af87b4b4d9c4ecb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
