--- a/Assets/Runtime/com.yannickscf.ls-tournament.common.asmdef
+++ b/Assets/Runtime/com.yannickscf.ls-tournament.common.asmdef
@@ -5,6 +5,8 @@
         "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:57aceb93e943b3a48b90c3b7039ece0c",
+        "GUID:09f1f8d463f81c249a0341c4a26fb9f2",
+        "GUID:a3380f2d6fc618f4881f8053e03cf785",
         "GUID:fc31e1cc0928e3041a1fd4a63edd812f",
         "GUID:a11ff146d38b27a44af87b4b4d9c4ecb"
     ],
