Update package for formulas name

--- a/Assets/package.json
+++ b/Assets/package.json
@@ -34,7 +34,7 @@
     {
       "displayName": "Tournament Formulas",
       "description": "Contains basic Formulas for LS tournaments",
-      "path": "Samples/Tournament Formulas"
+      "path": "Samples/Tournament Formulas~"
     }
   ]
 }
